--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=azureBotSample
+azure.openai.endpoint=https://virtual-avatar-gpt.openai.azure.com
+azure.openai.api-key=01b8dddc9d564d5c92edd909af2227e5
+azure.openai.api-version=2024-05-01-preview
+azure.openai.vector-store=vs_iRFcdxoigsQgtgasBgCUWtq5
