--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <version>${jaxb-impl.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+    <groupId>com.azure</groupId>
+    <artifactId>azure-ai-openai-assistants</artifactId>
+    <version>1.0.0-beta.3</version>
+</dependency>
     </dependencies>
 
     <build>
