--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+         <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-ai-openai-assistants</artifactId>
+        <version>1.0.0-beta.5</version>
+    </dependency>
     </dependencies>
 
     <build>
