--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
         <artifactId>azure-ai-openai-assistants</artifactId>
         <version>1.0.0-beta.3</version>
         </dependency>
+       <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version> 
+     </dependency>
+     <dependency>
+        <groupId>io.github.cdimascio</groupId>
+        <artifactId>dotenv-java</artifactId>
+        <version>3.0.0</version>
+    </dependency>
     </dependencies>
 
     <build>
